arrow-reflect-compiler-plugin/src/testData/diagnostics/macro_sample.kt
package foo.bar

<!MACRO_SAMPLE!>class MacroSample {

  fun foo(): String = "bar"
}<!>
